<resources>
    <string name="app_name">Timer</string>
    <string name="initial_time">00:00:00</string>
    <string name="start">Старт</string>
    <string name="timer_started">Таймер запущен</string>
    <string name="timer_fragment_title">Экран TimerFragment</string>
    <string name="timer_fragment_binding_ready">Binding подключён</string>
    <string name="timer_title">Таймер</string>
    <string name="settings_title">Настройки</string>
    <string name="default_duration_title">Длительность по умолчанию, мин.</string>
    <string name="default_sound_title">Звук по умолчанию</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="settings_save_failed">Не удалось сохранить настройки</string>
    <string name="duration_validation_error">Введите число от 1 до 1440</string>
    <string name="history_title">История</string>
    <string name="history_empty">Завершённых таймеров пока нет</string>
    <string name="clear_history">Очистить историю</string>
    <string name="delete_history_item">Удалить</string>
    <string name="history_duration_minutes">%1$d мин.</string>
    <string name="history_item_summary">%1$s · %2$s</string>
    <string name="pause">Пауза</string>
    <string name="resume">Продолжить</string>
    <string name="reset">Сброс</string>
    <string name="create_timer">Создать таймер</string>
    <string name="timer_setup_title">Длительность таймера</string>
    <string name="duration_minutes_hint">Минуты</string>
    <string name="next">Далее</string>
    <string name="sound_selection_title">Выберите сигнал</string>
    <string name="sound_bell">Звонок</string>
    <string name="sound_silent">Без звука</string>
    <string name="confirmation_title">Проверьте таймер</string>
    <string name="finish_creation">Готово</string>
    <string name="timer_channel_name">Завершение таймера</string>
    <string name="timer_channel_description">Уведомления об окончании обратного отсчёта</string>
    <string name="timer_bell_channel_name">Таймер со звуком</string>
    <string name="timer_bell_channel_description">Звуковые уведомления об окончании таймера</string>
    <string name="timer_silent_channel_name">Таймер без звука</string>
    <string name="timer_silent_channel_description">Беззвучные уведомления об окончании таймера</string>
    <string name="notification_permission_denied">Таймер будет работать без уведомлений</string>
    <string name="exact_alarm_permission_explanation">Разрешите точные будильники, чтобы таймер сработал вовремя даже в фоне</string>
    <string name="exact_alarm_unavailable">Точный alarm недоступен. Будет использован резервный неточный alarm</string>
    <string name="timer_finished_title">Таймер завершён</string>
    <string name="timer_finished_message">Установленное время истекло</string>
</resources>
